<resources>
    <string name="app_name">Inkless</string>
    <string name="signUp_titre">اختر نوع الحساب</string>
    <string name="signUp_writer">كــاتب</string>
    <string name="signUp_reader">قــارىء</string>
    <string name="signUp_narrator">راوي</string>
    <string name="signUp_username">اسم المستخدم</string>
    <string name="signUp_mdp">كلمة السر</string>
    <string name="signUp_confirm_mdp">تـأكيد كلمة السر</string>
    <string name="signUp_email">البريد الالكتروني</string>
    <string name="signUp_ccp">  ء ccp رقم الحساب البريدي</string>
    <string name="signUp_nation">البلد</string>
    <string name="signUp_nationChoose">اختر بلدك ..</string>
    <string name="signUp_valider">تسجيل</string>
    <string name="signUp_cnct_msg">جاري التسجيل ..</string>
    <string name="signUp_cnct_wait_msg">انتظر قليلا ..</string>
    <string name="signUp_validerType">التـالي</string>
    <string name="signUp_succ">تم التسجيل بنجاح.</string>
    <string name="signUp_email_err">ان هدا الايمايل موجود لدى مستخدم آخر.</string>
    <string name="signUp_errRemplisage">ادخل كل البيانات.</string>
    <string name="signUp_confirmMdpErr">كلمة السر غير متطابقة ..</string>
    <string name="login_email">اسم المستخدم</string>
    <string name="login_mdp">كلمة السر</string>
    <string name="login_enterButt">دخول</string>
    <string name="login_titre">تسجيل الدخول</string>
    <string name="login_signUpTitre">ادا لا تمتلك حساب </string>
    <string name="login_errRemplisage">ادخل كل البيانات.</string>
    <string name="login_signUpButt">  سجل من هنا</string>
    <string name="login_email_err">ان هدا الايمايل خاطىء.</string>
    <string name="login_mdp_err">كلمة السر خاطئة.</string>
    <string name="writer_noContrat">عليك بتجديد الاشتراك لكي تستطيع تحميل كتب اخرى ..</string>
    <string name="uploadBook_upload">رفع</string>
    <string name="uploadBook_resume">1.مقدمة الكتاب لوحدها</string>
    <string name="uploadBook_pdfComplet">2.الكتاب كاملا</string>
    <string name="uploadBook_category">المجال</string>
    <string name="uploadBook_categoryChoice">اختر مجال الكتاب</string>
    <string name="uploadBook_titre1">العنوان</string>
    <string name="uploadBook_titre2">. العنوان الثاني</string>
    <string name="uploadBook_photo">. صورة الغلاف</string>
    <string name="uploadBook_desc">اضافة وصف للكتاب ..</string>
    <string name="uploadBook_next">التـالي</string>
    <string name="uploadBook_hasPaper">اتوفر على النسخة الورقية </string>
    <string name="uploadBook_prixPaper">سعر النسخة الورقية</string>
    <string name="uploadBook_prixPdf">سعر النسخة الالكترونية</string>
    <string name="uploadBook_maisonEdition">اسم دار النشر</string>
    <string name="uploadBook_isbn">رقم ISBN</string>
    <string name="uploadBook_valider">انشر كتابي</string>
    <string name="uploadBook_succ">تمت الاضافة بنجاح</string>
    <string name="uploadBook_err">فشل عملية التحميل ، اعد المحاولة ..</string>
    <string name="uploadBook_uploadWait">جاري التحميل  ..</string>
    <string name="profile_user">حسابي</string>
    <string name="profile_bestSel">الاعلى مبيعا</string>
    <string name="profile_search">بحث</string>
    <string name="profile_saves">التسجيلات</string>
    <string name="profile_home">الرئيسية</string>
    <string name="profile_statButt">الاحصائيات</string>
    <string name="profile_configButt">تعديل</string>
    <string name="profile_uploadButt">رفع ملف جديد</string>
    <string name="profileBook_addToList">اضافة الى القائمة</string>
    <string name="profileBook_save">تسجيل</string>
    <string name="profileBook_download">تحميل</string>
    <string name="profileBook_hear">استمع</string>
    <string name="profileBook_read">اقرأ</string>
    <string name="profileBook_buy">اشتري</string>
    <string name="profileBook_rating">التقييم</string>
    <string name="profileBookRating">تقييم</string>
    <string name="profileBookRatingApres">لاحقا</string>
    <string name="profileBook_dateEdition">تاريخ الاصدار:</string>
    <string name="profileBook_edition">الناشر:</string>
    <string name="profileBook_category">نوع التأليف:</string>
    <string name="signUp_cnct_err">تأكد من اتصالك بالانترنت ..</string>
    <string name="profile_photoChange">تغيير الصورة</string>
    <string name="profile_photoAffiche">فتح الصورة</string>
    <string name="uploadAudio_titre">عنوان المقطع</string>
    <string name="uploadAudio_addPlus">+اضافة المزيد</string>
    <string name="uploadAudio_noAudio">ﻵ يوجد اي ملف للرفع.</string>
    <string name="uploadAudio_prixAudio">سعر الكتاب الصوتي</string>
    <string name="div_pub_choice">مانوع الملف الدي تريد رفعه</string>
    <string name="div_pub_choice_book">كتاب</string>
    <string name="div_pub_choice_audio">تسجيل صوتي</string>
    <string name="div_confirm_non">ﻵ</string>
    <string name="div_confirm_oui">نعم</string>
    <string name="profileBook_writer">اسم الكاتب:</string>
    <string name="searchBook_hint">بحث ..</string>
</resources>