<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">
    <TextView
        android:id="@+id/div_confirm_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font1"
        android:textSize="19sp"
        android:textColor="@color/Black"
        android:text="@string/div_pub_choice"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/div_confirm_non"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@color/AppColor"
            android:gravity="center"
            android:fontFamily="@font/font1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/div_confirm_non"/>
        <TextView
            android:id="@+id/div_confirm_oui"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@color/AppColor"
            android:gravity="center"
            android:fontFamily="@font/font1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/div_confirm_oui"/>
    </LinearLayout>

</LinearLayout>