<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layoutDirection="rtl">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/myratingbar" />

        <TextView
            android:id="@+id/rank_dialog_text1"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/profileBook_rating"
            android:textSize="24dp" />
    </LinearLayout>

    <RatingBar
        android:id="@+id/dialog_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="2"
        android:stepSize="1.0" />

    <LinearLayout
        android:layout_width="264dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layoutDirection="rtl">

        <Button
            android:id="@+id/backRat"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_butt3"
            android:drawableRight="@drawable/back"
            android:paddingLeft="30dp"
            android:text="@string/profileBookRatingApres" />

        <LinearLayout
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/BtnRat"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_butt3"
            android:drawableRight="@drawable/rat"
            android:drawingCacheQuality="auto"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/profileBookRating" />
    </LinearLayout>

</LinearLayout>