<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context="com.devs.celtica.inkless.Users.Profile">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@android:color/transparent">
        <ImageView
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:src="@drawable/backk"/>
        <ImageView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleX="1.9"
            android:scaleY="1.9"
            android:src="@drawable/logo"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="55dp"
        android:orientation="vertical"
        android:background="@color/WhiteTrans"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/bg_insc_form"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/Black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/font1"
            android:textColor="@color/BleuFonce"
            android:textSize="20sp"
            android:text="Oussama Celtica"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-3dp"
            android:fontFamily="@font/font1"
            android:textColor="@color/BleuFonce"
            android:textSize="15sp"
            android:text="Oussama Celtica"/>


        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:background="@drawable/profile_butt_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font1"
                android:layout_marginLeft="8dp"
                android:textColor="@color/Black"
                android:textSize="22sp"
                android:text="@string/profile_statButt"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:src="@drawable/stat2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:background="@drawable/profile_butt_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font1"
                android:layout_marginLeft="8dp"
                android:textColor="@color/Black"
                android:textSize="22sp"
                android:text="@string/profile_configButt"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:src="@drawable/config"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_uploadButt"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:layout_marginTop="15dp"
            android:visibility="visible"
            android:gravity="center"
            android:layoutDirection="rtl"
            android:background="@drawable/profile_butt_bg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font1"
                android:layout_marginLeft="8dp"
                android:textColor="@color/Black"
                android:textSize="22sp"
                android:text="@string/profile_uploadButt"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:src="@drawable/upload"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"/>

    </LinearLayout>



    <!-- Bottom Menu -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:padding="8dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@color/BleuNuit">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/user2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:gravity="center"
                android:fontFamily="@font/font1"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:text="@string/profile_user"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/stat"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:gravity="center"
                android:fontFamily="@font/font1"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:text="@string/profile_bestSel"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/loop"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:gravity="center"
                android:fontFamily="@font/font1"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:text="@string/profile_search"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/prize"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:gravity="center"
                android:fontFamily="@font/font1"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:text="@string/profile_saves"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/home"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.6"
                android:gravity="center"
                android:fontFamily="@font/font1"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:text="@string/profile_home"/>

        </LinearLayout>


    </LinearLayout>
</FrameLayout>
